Fixed spacing for skills section

--- a/css/sections.css
+++ b/css/sections.css
@@ -1,13 +1,18 @@
 * {
     box-sizing:border-box;
+    font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
 
 html {
     scroll-behavior: smooth;
 }
 
+.container-fluid {
+    padding-left:0;
+    padding-right:0;
+}
+
 #intro-section .row {
-/*     background-color:white; */
     border-radius:20px;
     padding-bottom: 20px;
     padding-top: 20px;
@@ -147,11 +152,22 @@ section {
 
 .skill-card {
     box-sizing:border-box;
-    background-color:red;
-    /* margin-left:20px;
-    margin-right:20px; */
-    border-radius:20px;
-    padding:10px;
+    padding:20px;
+    border-radius:10px;
+    color:#fff;
+    max-width:90vw;
+}
+
+.skill-card-1 {
+background-color:#ff9296;
+}
+
+.skill-card-2 {
+    background-color:#3149B2;
+}
+
+.skill-card-3 {
+    background-color:#2A3442;
 }
 
 .skills-section div div {
@@ -193,6 +209,16 @@ section {
 
 .carousel-caption {
     opacity:0;
+}
+
+#project-section .row {
+    padding-top:30px;
+    padding-bottom:20px;
+}
+
+.project-2 {
+    background-color:#212529;
+    color:white;
 }
 
 section .carousel-item:hover::after {
